--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,5 @@
-<h1>Welcome to <%= @crm_app_name %></h1>
-<p>Main menu</p>
+<h1>Welcome to <%= @crm_app_name %>!</h1>
+<h3>You can utilize this web application to add, modify, and view your contacts!</h3>
 <ul>
   <li><a href="/contacts">View all contacts</a></li>
   <!-- please complete me with links to other actions -->
